# pymodsecurity

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  compile_environment.devenv.yml  pytest.ini  setup.py
.ci-support/: compile_environment.devenv.yml  install-conda.sh  install-modsecurity.sh  requirements.txt  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.pytest_cache/v/cache/: lastfailed
examples/: basic_rules.conf  callback.py  simple.py
recipe/: build.sh  meta.yaml
src/: action.cpp  anchored_set_variable.cpp  anchored_variable.cpp  audit_log.cpp  collection.cpp  collections.cpp  debug_log.cpp  intervention.cpp  main.cpp  modsecurity.cpp  rule.cpp  rule_message.cpp  rules.cpp  rules_exceptions.cpp  rules_properties.cpp  rules_set.cpp  transaction.cpp  variable_origin.cpp  variable_value.cpp
tests/: basic_rules.conf  basic_rules.conf.template  config-logs.conf  fixtures.py  test_basic.py  test_chunks.py  test_import.py  test_intervention.py
